[gd_scene load_steps=3 format=2]

[ext_resource path="res://MGF Scene/tts_3x_test/ItemList.gd" type="Script" id=1]
[ext_resource path="res://MGF Scene/Setup/HomeButton.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LineEditFilterLang" type="LineEdit" parent="."]
offset_left = 864.0
offset_top = 408.0
offset_right = 1152.0
offset_bottom = 441.0
placeholder_text = "Language"

[node name="LineEditFilterName" type="LineEdit" parent="."]
offset_left = 522.0
offset_top = 408.0
offset_right = 856.0
offset_bottom = 441.0
placeholder_text = "Name"

[node name="Label" type="Label" parent="LineEditFilterName"]
offset_left = -58.0
offset_right = -2.0
offset_bottom = 32.0
text = "Filter:"
valign = 1

[node name="Tree" type="Tree" parent="."]
offset_left = 464.0
offset_top = 160.0
offset_right = 1152.0
offset_bottom = 400.0
columns = 2

[node name="Utterance" type="TextEdit" parent="."]
offset_left = 712.0
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 688.0
text = "Beware the Jabberwock, my son! The jaws that bite, the claws that catch!"
draw_spaces = true

[node name="ButtonSpeak" type="Button" parent="."]
offset_left = 464.0
offset_top = 576.0
offset_right = 576.0
offset_bottom = 608.0
text = "Speak"

[node name="ButtonIntSpeak" type="Button" parent="."]
offset_left = 592.0
offset_top = 576.0
offset_right = 704.0
offset_bottom = 608.0
text = "Interrupt"

[node name="ButtonStop" type="Button" parent="."]
offset_left = 464.0
offset_top = 616.0
offset_right = 576.0
offset_bottom = 648.0
text = "Stop"

[node name="ButtonPause" type="Button" parent="."]
offset_left = 592.0
offset_top = 616.0
offset_right = 704.0
offset_bottom = 648.0
toggle_mode = true
text = "Pause"

[node name="HSliderRate" type="HSlider" parent="."]
offset_left = 544.0
offset_top = 456.0
offset_right = 888.0
offset_bottom = 472.0
min_value = 0.1
max_value = 10.0
step = 0.05
value = 1.0
exp_edit = true

[node name="Label" type="Label" parent="HSliderRate"]
offset_left = -80.0
offset_top = -7.0
offset_right = -24.0
offset_bottom = 25.0
text = "Rate:"
valign = 1

[node name="Value" type="Label" parent="HSliderRate"]
offset_left = 352.0
offset_top = -7.0
offset_right = 416.0
offset_bottom = 25.0
text = "1.00x"
valign = 1

[node name="HSliderPitch" type="HSlider" parent="."]
offset_left = 544.0
offset_top = 496.0
offset_right = 888.0
offset_bottom = 512.0
max_value = 2.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="HSliderPitch"]
offset_left = -80.0
offset_top = -7.0
offset_right = -32.0
offset_bottom = 25.0
text = "Pitch:"
valign = 1

[node name="Value" type="Label" parent="HSliderPitch"]
offset_left = 352.0
offset_top = -7.0
offset_right = 416.0
offset_bottom = 25.0
text = "1.00x"
valign = 1

[node name="HSliderVolume" type="HSlider" parent="."]
offset_left = 544.0
offset_top = 536.0
offset_right = 888.0
offset_bottom = 552.0
min_value = 1.0
value = 100.0

[node name="Label" type="Label" parent="HSliderVolume"]
offset_left = -80.0
offset_top = -7.0
offset_right = -16.0
offset_bottom = 25.0
text = "Volume:"
valign = 1

[node name="Value" type="Label" parent="HSliderVolume"]
offset_left = 352.0
offset_top = -7.0
offset_right = 416.0
offset_bottom = 25.0
text = "50%"
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 464.0
offset_top = 120.0
offset_right = 592.0
offset_bottom = 144.0

[node name="Label" type="Label" parent="ColorRect"]
offset_right = 128.0
offset_bottom = 24.0
text = "Speaking..."
valign = 1

[node name="Log" type="TextEdit" parent="."]
offset_left = 1160.0
offset_top = 160.0
offset_right = 1456.0
offset_bottom = 688.0
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="ButtonClearLog" type="Button" parent="Log"]
offset_left = 216.0
offset_top = 8.0
offset_right = 288.0
offset_bottom = 37.0
text = "Clear"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 600.0
offset_top = 120.0
offset_right = 1456.0
offset_bottom = 144.0
bbcode_enabled = true
scroll_active = false

[node name="ButtonDemo" type="Button" parent="."]
offset_left = 464.0
offset_top = 656.0
offset_right = 704.0
offset_bottom = 685.0
text = "Demo"

[node name="Home" parent="." instance=ExtResource( 2 )]

[connection signal="text_changed" from="LineEditFilterLang" to="." method="_on_LineEditFilterName_text_changed"]
[connection signal="text_changed" from="LineEditFilterName" to="." method="_on_LineEditFilterName_text_changed"]
[connection signal="item_activated" from="Tree" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="ButtonSpeak" to="." method="_on_ButtonSpeak_pressed"]
[connection signal="pressed" from="ButtonIntSpeak" to="." method="_on_ButtonIntSpeak_pressed"]
[connection signal="pressed" from="ButtonStop" to="." method="_on_ButtonStop_pressed"]
[connection signal="pressed" from="ButtonPause" to="." method="_on_ButtonPause_pressed"]
[connection signal="value_changed" from="HSliderRate" to="." method="_on_HSliderRate_value_changed"]
[connection signal="value_changed" from="HSliderPitch" to="." method="_on_HSliderPitch_value_changed"]
[connection signal="value_changed" from="HSliderVolume" to="." method="_on_HSliderVolume_value_changed"]
[connection signal="pressed" from="Log/ButtonClearLog" to="." method="_on_ButtonClearLog_pressed"]
[connection signal="pressed" from="ButtonDemo" to="." method="_on_Button_pressed"]
